DT-2559 Remove query builder pattern from UserService and StaffService